--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,21 @@
 .footer {
+    position: sticky;
+    bottom: 0;
     margin: 0 auto 60px;
     max-width: 880px;
+    background-color: #000000;
 }
     
 @media screen and (max-width: 912px) {
     .footer {
-      width: 80%;
+      max-width: 581px;
       margin: 0 auto 36px;
     }
+}
+
+@media screen and (max-width: 625px) {
+  .footer {
+    max-width: 581px;
+    margin: 0 11px 36px;
+  }
 }
