--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,7 +7,8 @@
 
 @media screen and (max-width: 525px) {
     .header {
+        width: 100%;
         padding: 28px 0 32px;
-        width: 90%;
+        margin: 0;       
     }
 }
