--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -3,11 +3,11 @@
     width: 24px;
     height: 24px;
     background-image: url(../../../images/button-edit.svg);
-    background-size: contain;
+    background-position: center;
     background-color: transparent;
     background-repeat: no-repeat;
-    border: none;
-    display: inline-block;
+    background-size: 10px;
+    border: 1px solid #FFFFFF;
     transition: .2s;
 }
 
@@ -21,5 +21,6 @@
     .profile__button-edit {
       width: 18px;
       height: 18px;
+      background-size: 7.5px;
     }
 }
