--- a/pages/index.css
+++ b/pages/index.css
@@ -21,24 +21,35 @@
 @import url(../blocks/profile/__image/profile__image.css);
 @import url(../blocks/profile/__name/profile__name.css);
 
-/*блок elements-list */
-@import url(../blocks/elements-list/elements-list.css);
-@import url(../blocks/elements-list/__button-like/elements-list__button-like.css);
-@import url(../blocks/elements-list/__button-like/_active/elements-list__button-like_active.css);
-@import url(../blocks/elements-list/__card/elements-list__card.css);
-@import url(../blocks/elements-list/__image/elements-list__image.css);
-@import url(../blocks/elements-list/__title-container/elements-list__title-container.css);
-@import url(../blocks/elements-list/__title/elements-list__title.css);
+/* блок elements */
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__list/elements__list.css);
 
-/* блок edit-form */
-@import url(../blocks/edit-form/edit-form.css);
-@import url(../blocks/edit-form/__button-close/edit-form__button-close.css);
-@import url(../blocks/edit-form/__button/edit-form__button.css);
-@import url(../blocks/edit-form/__container/edit-form__container.css);
-@import url(../blocks/edit-form/__input/edit-form__input.css);
-@import url(../blocks/edit-form/__inputs/edit-form__inputs.css);
-@import url(../blocks/edit-form/__title/edit-form__title.css);
-@import url(../blocks/edit-form/_open/edit-form_open.css);
+/* блок card */
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__title-container/card__title-container.css);
+@import url(../blocks/card/__image/card__image.css);
+@import url(../blocks/card/__button-like/card__button-like.css);
+@import url(../blocks/card/__button-like/_active/card__button-like_active.css);
+@import url(../blocks/card/__button-remove/card__button-remove.css);
+
+
+/* блок popup */
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__button-close/popup__button-close.css);
+@import url(../blocks/popup/__button-save/popup__button-save.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__inputs/popup__inputs.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/_scale-image/popup_scale-image.css);
+@import url(../blocks/popup/__figure-container/popup__figure-container.css);
+@import url(../blocks/popup/__figure/popup__figure.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
 
 /* блок footer */
 @import url(../blocks/footer/footer.css);
