--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -5,9 +5,5 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
-    margin: 0 0 30px 0;
-}
-  
-.popup__input:last-of-type {
-    margin: 0 0 45px 0;
+    outline-color: #08e80f;
 }
