--- a/src/blocks/profile/__button-add/profile__button-add.css
+++ b/src/blocks/profile/__button-add/profile__button-add.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 50px;
     max-width: 150px;
-    background-color: transparent;
+    background-color: #000000;
     border: 2px solid #ffffff;
     border-radius: 2px;
     transition: .2s;
@@ -20,6 +20,7 @@
 @media screen and (max-width: 677px) {
     .profile__button-add {
       margin-top: 36px;
+      width: 100%;
       max-width: 282px;
     }
 }
