--- a/src/blocks/profile/__name/profile__name.css
+++ b/src/blocks/profile/__name/profile__name.css
@@ -6,6 +6,9 @@
     color: #ffffff;
     width: 100%;
     max-width: 294px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
   
 @media screen and (max-width: 677px) {
