--- a/src/blocks/card/__button-like/card__button-like.css
+++ b/src/blocks/card/__button-like/card__button-like.css
@@ -1,6 +1,6 @@
 .card__button-like {
-    width: 9%;
-    height: 65%;
+    width: 22px;
+    height: 19px;
     background-image: url(../../../images/like.svg);
     background-repeat: no-repeat;
     border: none;
