--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,6 +1,7 @@
 .profile__image {
     margin: 0 30px 0 0;
-    width: 120px;
+    max-width: 120px;
+    width: 100%;
     height: 120px;
     border-radius: 50%;
 }
