--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -21,6 +21,9 @@
 @import url(../blocks/profile/__image/profile__image.css);
 @import url(../blocks/profile/__name/profile__name.css);
 
+@import url(../blocks/profile/__image-button-edit/profile__image-button-edit.css);
+@import url(../blocks/profile/__image-wrapper/profile__image-wrapper.css);
+
 /* блок elements */
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__list/elements__list.css);
@@ -32,6 +35,8 @@
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__button-like/card__button-like.css);
 @import url(../blocks/card/__button-like/_active/card__button-like_active.css);
+@import url(../blocks/card/__like-container/card__like-container.css);
+@import url(../blocks/card/__count-like/card__count-like.css);
 @import url(../blocks/card/__button-remove/card__button-remove.css);
 
 
