--- a/src/blocks/card/__button-like/card__button-like.css
+++ b/src/blocks/card/__button-like/card__button-like.css
@@ -8,8 +8,9 @@
     transition: .3s;
 }
   
-.card__button-like:hover {
-    opacity: .5;
-    cursor: pointer;
+@media (min-width: 768px) {
+    .card__button-like:hover {
+        opacity: .5;
+        cursor: pointer;
+    }
 }
-  
